# setenv

./: Cargo.toml  LICENSE  README.adoc  test  test.toml
src/: cli.rs  env.rs  format.rs  helper.rs  main.rs
