[package]
name = "setenv"
version = "0.1.0"
edition = "2021"
description = "Generate scripts to set environment variables for various shells."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.20", features = ["derive"] }
