[package]
name = "setenv"
version = "0.1.0"
edition = "2021"
description = "Generate scripts to set environment variables for various shells."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2"
env_logger = "0.9"
clap_complete = "4"
log = "0.4"
anyhow = "1.0"
